tests/NormalTests/paczka1/fuzzy1/12878443.err
Error in line 8: 7NZkz A481 54,0
Error in line 10: A104 A104 97,6
Error in line 19: fdPf2XYe A104 39,4
Error in line 21: fdPf2XYe A488 34,6
Error in line 20: gNfgu8Fu7 A481 67,7
Error in line 24: vnEjLjrY S664 17,1
Error in line 15: tmscMBq A481 206,2
Error in line 32: vnEjLjrY A104 76,2
